--- a/content/blog/learn-gatsbyjs/index.mdx
+++ b/content/blog/learn-gatsbyjs/index.mdx
@@ -13,18 +13,18 @@ featuredimage:
   alt: "Gastby"
 ---
 
-# Why?  为什么我们需要Gatsby?
+# 为什么我们需要Gatsby
 
 
 Gatsby 是一个静态网站生成器，例如Hugo，Jekyll等。那有什么特别之处呢？
 Gatsby可用于构建静态网站，这些网站是渐进式Web应用程序，遵循最新的Web标准，并经过优化以实现高性能。它利用了最新和流行的技术，包括ReactJS，Webpack，GraphQL，现代的ES6 + JavaScript和CSS。
 
-- ✔️ 基于 React 的免费、开源框架
-- ✔️ 构建运行速度极快的网站
-- ✔️ Gatsby SSG会利用代码/数据拆分，预加载，预缓存，图像优化和各种性能增强的功能
-- ✔️ 构建时渲染服务器端
-- ✔️ 推送到仓库时，会自动部署
-- ✔️ 超丰富的生态资源
+✔️ 基于 React 的免费、开源框架  
+✔️ 构建运行速度极快的网站  
+✔️ Gatsby SSG会利用代码/数据拆分，预加载，预缓存，图像优化和各种性能增强的功能  
+✔️ 构建时渲染服务器端  
+✔️ 推送到仓库时，会自动部署  
+✔️ 超丰富的生态资源  
 
 
 ![Gatsby](fun.png)
