--- a/content/articles/bem/index.mdx
+++ b/content/articles/bem/index.mdx
@@ -2,7 +2,7 @@
 title: BEM
 date: '2018-02-28T18:16:01+08:00'
 status: publish
-category: ["fe"]
+category: ["css"]
 tag: ["css"]
 author: "max"
 excerpt: ""
