--- a/content/articles/constructor-page-base-on-design/index.mdx
+++ b/content/articles/constructor-page-base-on-design/index.mdx
@@ -2,7 +2,7 @@
 title: 如何高保真还原设计稿
 date: '2019-04-05'
 status: publish
-category: ["fe"]
+category: ["css"]
 tag: ["css"]
 author: "max"
 excerpt: ""
