--- a/content/articles/css-study/index.mdx
+++ b/content/articles/css-study/index.mdx
@@ -3,7 +3,7 @@ title: CSS 笔记
 date: '2019-01-01'
 status: publish
 permalink: /note-about-css
-category: ["fe"]
+category: ["css"]
 tag: ["css"]
 author: "rick"
 excerpt: "关于css的一些笔记"
