--- a/content/articles/design-concept/index.mdx
+++ b/content/articles/design-concept/index.mdx
@@ -2,7 +2,7 @@
 title: 设计概念 记录 
 date: '2018-01-01' 
 status: publish 
-category: ["theory"]
+category: ["uncate"]
 tag: ["pattern"]
 author: "max"
 excerpt: ""
