--- a/content/articles/js-performance/index.mdx
+++ b/content/articles/js-performance/index.mdx
@@ -3,7 +3,7 @@ title: '性能优化'
 date: '2020-01-01'
 status: publish
 permalink: /performance-in-fe
-category: ["fe"]
+category: ["js"]
 tag: ["js"]
 author: "max"
 excerpt: "前端性能优化"
