--- a/content/articles/note-js/index.mdx
+++ b/content/articles/note-js/index.mdx
@@ -3,7 +3,7 @@ title: JS 笔记
 date: '2014-01-01'
 status: publish
 permalink: /note-about-js
-category: ["fe"]
+category: ["js"]
 tag: ["js"]
 author: "rick"
 excerpt: "关于js的一些笔记"
