--- a/content/articles/js-core/index.mdx
+++ b/content/articles/js-core/index.mdx
@@ -3,7 +3,7 @@ title: 'JavaScript - Core'
 date: '2018-11-11T13:33:51+08:00'
 status: publish
 permalink: /core-in-javascript
-category: ["fe"]
+category: ["js"]
 tag: ["js"]
 author: "max"
 excerpt: "js core"
