--- a/content/articles/begining-algorithm/index.mdx
+++ b/content/articles/begining-algorithm/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "算法 入门"
-date: "2020-01-01'"
+date: "2020-01-01"
 featured: false
 category: "algorithm"
 excerpt: "主要介绍了javascript常用算法,结合实例形式较为详细的分析总结了JavaScript中常见的各种排序算法以及堆、栈、链表等数据结构的相关实现与使用技巧,需要的朋友可以参考下"
