--- a/content/articles/learning-redux/index.mdx
+++ b/content/articles/learning-redux/index.mdx
@@ -23,9 +23,9 @@ cover: "./re.jpg"
 - 是否显示加载动效或者分页器
 
 管理不断变化的 state 非常困难. state 在什么时候，由于什么原因，如何变化已然不受控制.  
-这里的复杂性很大程度上来自于：我们总是将两个难以理清的概念混淆在一起：**变化和异步**.
+这里的复杂性很大程度上来自于：我们总是将两个难以理清的概念混淆在一起：*变化和异步*.
 
-跟随 Flux、CQRS 和 Event Sourcing 的脚步，通过限制更新发生的时间和方式，**Redux 试图让 state 的变化变得可预测**。
+跟随 Flux、CQRS 和 Event Sourcing 的脚步，通过限制更新发生的时间和方式，*Redux 试图让 state 的变化变得可预测*。
 这些限制条件反映在 Redux 的三大原则中.
 
 ## 核心概念
@@ -59,8 +59,8 @@ action就是一个普通JavaScript对象来描述发生了什么.
 { type: 'SET_VISIBILITY_FILTER', filter: 'SHOW_ALL' }
 ```
 
-为了把action与state串起来，开发一些函数， 就是 **reducer**.  
-**reducer** 只是一个接收state 与 action, 并返回新的state的函数.
+为了把action与state串起来，开发一些函数， 就是 *reducer*.  
+*reducer* 只是一个接收state 与 action, 并返回新的state的函数.
 
 ```js
 function visibilityFilter(state = 'SHOW_ALL', action) {
@@ -110,10 +110,10 @@ Redux 可用这三个基本原则描述:
 - 使用纯函数来执行修改
 
 ### 单一数据源
-整个应用State 储存一棵Object tree, 且只存在唯一一个 **store** 中.
+整个应用State 储存一棵Object tree, 且只存在唯一一个 *store* 中.
 
 ### State 是只读的
-唯一改变 state 的方法就是触发 **action**，action 是一个用于描述已发生事件的普通对象。  
+唯一改变 state 的方法就是触发 *action*，action 是一个用于描述已发生事件的普通对象。  
 这样确保了视图和网络请求都不能直接修改 state，相反它们只能表达想要修改的意图. 因为所有的修改都被集中化处理，且严格按照一个接一个的顺序执行，因此不用担心竞态条件（race condition）的出现
 ```js
 store.dispatch({
@@ -128,7 +128,7 @@ store.dispatch({
 ```
 
 ### 使用纯函数来执行修改
-为了描述 action 如何改变 state tree ，你需要编写 **reducers**  
+为了描述 action 如何改变 state tree ，你需要编写 *reducers*  
 ```js
 function visibilityFilter(state = 'SHOW_ALL', action) {
     switch (action.type) {
@@ -186,11 +186,11 @@ import { ADD_TODO, REMOVE_TODO } from '../actionTypes'
 除 `type` 字段, action对象结构完全取决于你.  
 因数据存放在数组中， 所以我们通过下标`index`, 实际项目中一般会在新建数据时 生成唯一ID作为数据引用标识.
 
-**应尽量减少在action中传递的数据**
+*应尽量减少在action中传递的数据*
 
 ### Action创建函数
 
-**Action创建函数** 就是生成 action 的方法. 在Redux中的 action创建函数只是简单的返回一个 action:
+*Action创建函数* 就是生成 action 的方法. 在Redux中的 action创建函数只是简单的返回一个 action:
 ```js
 function addTodo(text) {
     return {
@@ -244,13 +244,13 @@ reducer 就一纯函数, 接收旧的 state & action, 返回新 state.
 ;(previousState, action) => newState
 ```
 之所以称为 reducer, 是因与被传入 `Array.prototype.reduce(reducer, ?initialValue)` 里回调函数属于相同类型.  
-**保持 reducer 纯净非常重要. 永远不要做这些**
+*保持 reducer 纯净非常重要. 永远不要做这些*
 - 修改传入参数；
 - 执行有副作用的操作，如 API 请求和路由跳转；
 - 调用非纯函数，如 Date.now() 或 Math.random()
 
-**只要传入参数相同，返回计算得到的下一个 state 就一定相同。  
-没有特殊情况、没有副作用，没有 API 请求、没有变量修改，单纯执行计算。**
+*只要传入参数相同，返回计算得到的下一个 state 就一定相同。  
+没有特殊情况、没有副作用，没有 API 请求、没有变量修改，单纯执行计算。*
 
 ```js
 import { VisibilityFilters } from './actions'
@@ -288,11 +288,11 @@ function todoApp (state = initialState, action ) {
 ```
 
 要点:  
-**1.不要修改 `state`.**  
+*1.不要修改 `state`.*  
 使用 `object.assign()` 新建副本.  
 在开启ES7的 *对象展开运算符* 的支持, 使 `{...state, ...newState }` 达到相同目的.
    
-**2.在`default` 情况下返回旧的 `state`.**   
+*2.在`default` 情况下返回旧的 `state`.*   
 遇到未知 action时, 一定要返回旧的 `state`
 
 
@@ -403,14 +403,14 @@ Store 有以下职责:
 - 通过 subscribe(listener) 注册监听器;
 - 通过 subscribe(listener) 返回的函数注销监听器
 
-再次强调一下 **Redux 应用只有一个单一的 store**  
+再次强调一下 *Redux 应用只有一个单一的 store*  
 
 ```js
 import { createStore } from 'redux'
 import todoApp from './reducers'
 const store = createStore(todoApp)
 ```
-`createStore()` 的**第二个参数是可选**的, 用于设置 state 初始状态.
+`createStore()` 的*第二个参数是可选*的, 用于设置 state 初始状态.
 这对开发同构应用时非常有用，服务器端 redux 应用的 state 结构可以与客户端保持一致, 那么客户端可以将从网络接收到的服务端 state 直接用于本地数据初始化。
 
 ```js
